@@ -2,9 +2,9 @@
 Contributors: Gnar-Software, adamkentdev
 Tags: gocardless, go cardless, instant bank pay, open banking, woocommerce, payment, gateway, bank transfer, credit card, card payments, prevent fraud, security, subscriptions, recurring payments
 Requires at least: 5.8
-Tested up to: 6.1
+Tested up to: 6.2
 Requires PHP: 7.3
-Stable tag: 1.2.4
+Stable tag: 1.3.0
 License: GPLv3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 
