@@ -2,6 +2,9 @@
 
 = 1.3.0 - 21-04-2023 =
 * Implemented patch to resolve issue whereby order is not always captured.
+* WC Order now created at the point of payment initiation
+* Added billing_request webhook handler to add payment ID to orders where it doesn't already exists
+* Changed main js script name to avoid caching issues
 
 = 1.2.4 - 01-03-2023 =
 * Fixed change log issue that prevented v1.2.3 being committed to svn fully
